added mapping from user-provided PIDs to real Handle PIDs to result of Batch Record creation endpoint + tests
Signed-off-by: Maximilian Inckmann <maximilian.inckmann@kit.edu>